--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -7,16 +7,14 @@ dependencies:
     - field.field.node.event.body
     - field.field.node.event.field_address
     - field.field.node.event.field_argumentaires
-    - field.field.node.event.field_bloc
-    - field.field.node.event.field_bloc_incitation
     - field.field.node.event.field_date
     - field.field.node.event.field_document
     - field.field.node.event.field_event_type
     - field.field.node.event.field_image
     - field.field.node.event.field_inscription
-    - field.field.node.event.field_link_info_go
     - field.field.node.event.field_place
     - field.field.node.event.field_release_date
+    - field.field.node.event.field_retour_liste
     - node.type.event
   module:
     - datetime
@@ -143,13 +141,11 @@ hidden:
   content_moderation_control: true
   field_address: true
   field_argumentaires: true
-  field_bloc: true
-  field_bloc_incitation: true
   field_document: true
   field_event_type: true
   field_inscription: true
-  field_link_info_go: true
   field_place: true
   field_release_date: true
+  field_retour_liste: true
   langcode: true
   links: true
