--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "drupal/ds": "^3.1",
         "drupal/entity_browser": "^2.0.0",
         "drupal/entity_embed": "^1.0@beta",
+        "drupal/exclude_node_title": "^1.0@beta",
         "drupal/features": "^3.7",
         "drupal/field_group": "^1.0",
         "drupal/fixed_block_content": "^1.0@RC",
