--- a/config/sync/core.entity_view_display.node.event.full.yml
+++ b/config/sync/core.entity_view_display.node.event.full.yml
@@ -7,22 +7,19 @@ dependencies:
     - field.field.node.event.body
     - field.field.node.event.field_address
     - field.field.node.event.field_argumentaires
-    - field.field.node.event.field_bloc
-    - field.field.node.event.field_bloc_incitation
     - field.field.node.event.field_date
     - field.field.node.event.field_document
     - field.field.node.event.field_event_type
     - field.field.node.event.field_image
     - field.field.node.event.field_inscription
-    - field.field.node.event.field_link_info_go
     - field.field.node.event.field_place
     - field.field.node.event.field_release_date
+    - field.field.node.event.field_retour_liste
     - node.type.event
   module:
     - datetime
     - ds
     - geofield_map
-    - taxonomy
     - text
     - user
     - webform
@@ -47,8 +44,8 @@ third_party_settings:
           layout_class: {  }
     regions:
       header:
-        - node_title
         - field_event_type
+        - node_title
       left:
         - field_image
         - body
@@ -58,6 +55,7 @@ third_party_settings:
         - field_address
         - field_document
         - field_place
+        - field_retour_liste
       footer:
         - field_bloc_incitation
         - field_bloc
@@ -66,9 +64,14 @@ third_party_settings:
     fields:
       node_title:
         plugin_id: node_title
-        weight: 0
+        weight: 1
         label: hidden
         formatter: default
+        settings:
+          wrapper: h2
+          class: page-header
+          exclude_node_title: '0'
+          link: false
 id: node.event.full
 targetEntityType: node
 bundle: event
@@ -90,29 +93,11 @@ content:
     region: right
   field_argumentaires:
     type: entity_reference_label
-    weight: 11
+    weight: 12
     region: footer
     label: hidden
     settings:
       link: true
-    third_party_settings: {  }
-  field_bloc:
-    type: entity_reference_entity_view
-    weight: 10
-    region: footer
-    label: hidden
-    settings:
-      link: true
-      view_mode: default
-    third_party_settings: {  }
-  field_bloc_incitation:
-    type: entity_reference_entity_view
-    weight: 9
-    region: footer
-    label: hidden
-    settings:
-      link: true
-      view_mode: default
     third_party_settings: {  }
   field_date:
     weight: 5
@@ -134,11 +119,12 @@ content:
       link: true
     third_party_settings: {  }
   field_event_type:
-    weight: 1
+    weight: 0
     label: hidden
-    settings: {  }
+    settings:
+      link: true
     third_party_settings: {  }
-    type: entity_reference_rss_category
+    type: entity_reference_label
     region: header
   field_image:
     type: entity_reference_entity_view
@@ -151,20 +137,11 @@ content:
     third_party_settings: {  }
   field_inscription:
     type: webform_entity_reference_entity_view
-    weight: 12
+    weight: 13
     region: footer
     label: hidden
     settings:
       source_entity: true
-    third_party_settings: {  }
-  field_link_info_go:
-    type: entity_reference_entity_view
-    weight: 4
-    region: right
-    label: visually_hidden
-    settings:
-      link: true
-      view_mode: default
     third_party_settings: {  }
   field_place:
     type: geofield_google_map
@@ -233,6 +210,13 @@ content:
         markercluster_additional_options: ''
         markercluster_control: 0
       gmap_api_key: ''
+    third_party_settings: {  }
+  field_retour_liste:
+    type: text_default
+    weight: 9
+    region: right
+    label: visually_hidden
+    settings: {  }
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
