--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -14,5 +14,6 @@ permissions:
   - 'access site-wide contact form'
   - 'generate entity ref'
   - 'search content'
+  - 'use exclude node title'
   - 'use text format restricted_html'
   - 'view media'
