--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -47,6 +47,7 @@ settings:
           name: 'Block Formatting'
           items:
             - Format
+            - Styles
         -
           name: Tools
           items:
@@ -54,7 +55,7 @@ settings:
             - Source
   plugins:
     stylescombo:
-      styles: ''
+      styles: 'div.txt-highlighted|Mis en exergue'
     language:
       language_list: un
     video_embed:
