same-height-cols.js added and called via libraries and twig theme.

--- a/web/themes/contrib/ensemble/less/ensemble.libraries.yml
+++ b/web/themes/contrib/ensemble/less/ensemble.libraries.yml
@@ -39,6 +39,12 @@ sameheighttitles:
   dependencies:
       - core/jquery
 
+sameheightcols:
+  js:
+    js/sameheight/same-height-cols.js: {}
+  dependencies:
+      - core/jquery
+
 slideshow:
   js:
     js/slideshow/slideshow.js: {}
