config exported : article list layout improve.

--- a/config/sync/core.entity_view_display.node.article.liste.yml
+++ b/config/sync/core.entity_view_display.node.article.liste.yml
@@ -37,7 +37,18 @@ third_party_settings:
       right:
         - node_title
         - body
+        - node_link
     fields:
+      node_link:
+        plugin_id: node_link
+        weight: 3
+        label: hidden
+        formatter: default
+        settings:
+          'link text': 'lire la suite'
+          'link class': ''
+          wrapper: ''
+          class: ''
       node_title:
         plugin_id: node_title
         weight: 1
