Prise en compte des images annexes de Dotclear
Dotclear génère pour chaque image quatre versions supplémentaires, dont
le nom commence effectivement par un point et finit par _sq, _t, _s ou
_m. En Drupal, on transpose ce comportement en utilisant des styles
d'images.

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -23,6 +23,7 @@ module:
   dynamic_page_cache: 0
   editor: 0
   embed: 0
+  ensemble_migrate: 0
   entity_browser: 0
   entity_embed: 0
   exclude_node_title: 0
