--- a/config/sync/views.view.taxonomy_term.yml
+++ b/config/sync/views.view.taxonomy_term.yml
@@ -106,7 +106,7 @@ display:
           exception:
             value: ''
             title_enable: false
-            title: Tout
+            title: All
           title_enable: true
           title: '{{ arguments.tid }}'
           default_argument_type: fixed
