--- a/config/sync/user.role.contributor.yml
+++ b/config/sync/user.role.contributor.yml
@@ -13,14 +13,18 @@ permissions:
   - 'access assets_browser entity browser pages'
   - 'access content overview'
   - 'access contextual links'
+  - 'access edition workflow_transition form'
   - 'access file_browser entity browser pages'
   - 'access files overview'
   - 'access in-place editing'
   - 'access media overview'
+  - 'access own edition workflow_transion overview'
   - 'access toolbar'
+  - 'access workbench'
   - 'administer nodes'
   - 'create article content'
   - 'create audio media'
+  - 'create edition workflow_transition'
   - 'create event content'
   - 'create file media'
   - 'create image media'
@@ -29,20 +33,16 @@ permissions:
   - 'create video_embed media'
   - 'delete article revisions'
   - 'delete media'
-  - 'delete own article content'
   - 'delete own audio media'
-  - 'delete own event content'
   - 'delete own file media'
   - 'delete own image media'
   - 'delete own video_embed media'
-  - 'edit own article content'
   - 'edit own audio media'
   - 'edit own event content'
   - 'edit own file media'
   - 'edit own image media'
   - 'edit own page content'
   - 'edit own video_embed media'
-  - 'revert article revisions'
   - 'update media'
   - 'use editorial transition create_new_draft'
   - 'use editorial transition demande_de_validation'
@@ -53,5 +53,4 @@ permissions:
   - 'view all revisions'
   - 'view any unpublished content'
   - 'view article revisions'
-  - 'view own unpublished content'
   - 'view the administration theme'
