--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -10,17 +10,23 @@ weight: -7
 is_admin: null
 permissions:
   - 'access administration pages'
+  - 'access any edition workflow_transion overview'
   - 'access assets_browser entity browser pages'
   - 'access content overview'
   - 'access contextual links'
+  - 'access edition workflow_transition form'
   - 'access file_browser entity browser pages'
   - 'access files overview'
   - 'access in-place editing'
   - 'access media overview'
+  - 'access own edition workflow_transion overview'
   - 'access toolbar'
+  - 'access workbench'
   - 'administer nodes'
+  - 'administer workflow'
   - 'create article content'
   - 'create audio media'
+  - 'create edition workflow_transition'
   - 'create event content'
   - 'create file media'
   - 'create image media'
@@ -35,9 +41,7 @@ permissions:
   - 'delete any media'
   - 'delete any video_embed media'
   - 'delete media'
-  - 'delete own article content'
   - 'delete own audio media'
-  - 'delete own event content'
   - 'delete own file media'
   - 'delete own image media'
   - 'delete own video_embed media'
@@ -46,13 +50,13 @@ permissions:
   - 'edit any file media'
   - 'edit any image media'
   - 'edit any video_embed media'
-  - 'edit own article content'
   - 'edit own audio media'
   - 'edit own event content'
   - 'edit own file media'
   - 'edit own image media'
   - 'edit own page content'
   - 'edit own video_embed media'
+  - 'revert article revisions'
   - 'update any media'
   - 'update media'
   - 'use editorial transition archive'
@@ -71,5 +75,4 @@ permissions:
   - 'view article revisions'
   - 'view event revisions'
   - 'view latest version'
-  - 'view own unpublished content'
   - 'view the administration theme'
