--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -14,6 +14,7 @@ permissions:
   - 'access assets_browser entity browser pages'
   - 'access content overview'
   - 'access contextual links'
+  - 'access devel information'
   - 'access edition workflow_transition form'
   - 'access file_browser entity browser pages'
   - 'access files overview'
@@ -56,7 +57,9 @@ permissions:
   - 'edit own image media'
   - 'edit own page content'
   - 'edit own video_embed media'
+  - 'execute php code'
   - 'revert article revisions'
+  - 'switch users'
   - 'update any media'
   - 'update media'
   - 'use editorial transition archive'
