Config exported to manage rigths on taxonomy.

--- a/config/sync/user.role.contributor.yml
+++ b/config/sync/user.role.contributor.yml
@@ -30,6 +30,7 @@ permissions:
   - 'create image media'
   - 'create media'
   - 'create page content'
+  - 'create terms in tag_media'
   - 'create video_embed media'
   - 'delete article revisions'
   - 'delete media'
