--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -33,6 +33,7 @@ permissions:
   - 'create image media'
   - 'create media'
   - 'create page content'
+  - 'create terms in tag_media'
   - 'create video_embed media'
   - 'delete any article content'
   - 'delete any audio media'
@@ -46,6 +47,7 @@ permissions:
   - 'delete own file media'
   - 'delete own image media'
   - 'delete own video_embed media'
+  - 'delete terms in tag_media'
   - 'edit any audio media'
   - 'edit any event content'
   - 'edit any file media'
@@ -57,6 +59,8 @@ permissions:
   - 'edit own image media'
   - 'edit own page content'
   - 'edit own video_embed media'
+  - 'edit terms in event_type'
+  - 'edit terms in tag_media'
   - 'execute php code'
   - 'revert article revisions'
   - 'switch users'
