Config exported to manage image styles, display and crop.

--- a/config/sync/core.entity_view_mode.media.teaser.yml
+++ b/config/sync/core.entity_view_mode.media.teaser.yml
@@ -5,6 +5,6 @@ dependencies:
   module:
     - media
 id: media.teaser
-label: Teaser
+label: 'Liste (768x540)'
 targetEntityType: media
 cache: true
