--- a/config/sync/core.entity_view_display.media.image.large_paysage.yml
+++ b/config/sync/core.entity_view_display.media.image.large_paysage.yml
@@ -1,32 +1,34 @@
-uuid: af593329-b9df-47c6-acd4-d27c112c4368
+uuid: e23b82e1-cecf-4129-94d0-b423bbde1b53
 langcode: fr
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.full
+    - core.entity_view_mode.media.large_paysage
     - field.field.media.image.field_media_image
-    - image.style.large_landscape
+    - field.field.media.image.field_tag_media
+    - image.style.large_paysage1200x737
     - media.type.image
   module:
     - image
 _core:
   default_config_hash: jOwnt_yq6AKAfqU6f0xKnxEkFQ2eTPJWxrk3WMLbL68
-id: media.image.full
+id: media.image.large_paysage
 targetEntityType: media
 bundle: image
-mode: full
+mode: large_paysage
 content:
   field_media_image:
     label: visually_hidden
     settings:
-      image_style: large_landscape
+      image_style: large_paysage1200x737
       image_link: ''
     third_party_settings: {  }
     type: image
-    weight: 1
+    weight: 0
     region: content
 hidden:
   created: true
+  field_tag_media: true
   langcode: true
   name: true
   thumbnail: true
