--- a/config/sync/core.entity_view_display.media.image.teaser.yml
+++ b/config/sync/core.entity_view_display.media.image.teaser.yml
@@ -5,7 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.media.teaser
     - field.field.media.image.field_media_image
-    - image.style.medium_carre
+    - field.field.media.image.field_tag_media
+    - image.style.liste768x540
     - media.type.image
   module:
     - image
@@ -19,7 +20,7 @@ content:
   field_media_image:
     label: visually_hidden
     settings:
-      image_style: medium_carre
+      image_style: liste768x540
       image_link: ''
     third_party_settings: {  }
     type: image
@@ -27,6 +28,7 @@ content:
     region: content
 hidden:
   created: true
+  field_tag_media: true
   langcode: true
   name: true
   thumbnail: true
