--- a/config/sync/core.entity_view_mode.media.bandeau.yml
+++ b/config/sync/core.entity_view_mode.media.bandeau.yml
@@ -5,6 +5,6 @@ dependencies:
   module:
     - media
 id: media.bandeau
-label: Bandeau
+label: 'Haut événement (768x331)'
 targetEntityType: media
 cache: true
