Revert "Config exported to manage image styles, display and crop."
This reverts commit dd6d0d0ee8a78e6a3523d1445ff5d995d99f58ee.

--- a/config/sync/core.entity_view_mode.media.slideshow.yml
+++ b/config/sync/core.entity_view_mode.media.slideshow.yml
@@ -5,6 +5,6 @@ dependencies:
   module:
     - media
 id: media.slideshow
-label: 'slideshow (640x360)'
+label: slideshow
 targetEntityType: media
 cache: true
