--- a/config/sync/core.entity_view_display.media.image.full.yml
+++ b/config/sync/core.entity_view_display.media.image.full.yml
@@ -1,34 +1,32 @@
-uuid: e23b82e1-cecf-4129-94d0-b423bbde1b53
+uuid: af593329-b9df-47c6-acd4-d27c112c4368
 langcode: fr
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.large_paysage
+    - core.entity_view_mode.media.full
     - field.field.media.image.field_media_image
-    - field.field.media.image.field_tag_media
-    - image.style.large_paysage1200x737
+    - image.style.large_landscape
     - media.type.image
   module:
     - image
 _core:
   default_config_hash: jOwnt_yq6AKAfqU6f0xKnxEkFQ2eTPJWxrk3WMLbL68
-id: media.image.large_paysage
+id: media.image.full
 targetEntityType: media
 bundle: image
-mode: large_paysage
+mode: full
 content:
   field_media_image:
     label: visually_hidden
     settings:
-      image_style: large_paysage1200x737
+      image_style: large_landscape
       image_link: ''
     third_party_settings: {  }
     type: image
-    weight: 0
+    weight: 1
     region: content
 hidden:
   created: true
-  field_tag_media: true
   langcode: true
   name: true
   thumbnail: true
