--- a/config/sync/core.entity_view_display.media.image.teaser.yml
+++ b/config/sync/core.entity_view_display.media.image.teaser.yml
@@ -5,8 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.teaser
     - field.field.media.image.field_media_image
-    - field.field.media.image.field_tag_media
-    - image.style.liste768x540
+    - image.style.medium_carre
     - media.type.image
   module:
     - image
@@ -20,7 +19,7 @@ content:
   field_media_image:
     label: visually_hidden
     settings:
-      image_style: liste768x540
+      image_style: medium_carre
       image_link: ''
     third_party_settings: {  }
     type: image
@@ -28,7 +27,6 @@ content:
     region: content
 hidden:
   created: true
-  field_tag_media: true
   langcode: true
   name: true
   thumbnail: true
