Image style, crop style and media display up.

--- a/config/sync/core.entity_view_display.media.image.full.yml
+++ b/config/sync/core.entity_view_display.media.image.full.yml
@@ -27,6 +27,7 @@ content:
     region: content
 hidden:
   created: true
+  field_tag_media: true
   langcode: true
   name: true
   thumbnail: true
