--- a/config/sync/crop.type.large_landsacape.yml
+++ b/config/sync/crop.type.large_landsacape.yml
@@ -2,11 +2,11 @@ uuid: 1ac7a39f-c2f3-45b8-8e7f-6b4828e98729
 langcode: fr
 status: true
 dependencies: {  }
-label: 'Large paysage'
+label: 'Large paysage (1200x737)'
 id: large_landsacape
 description: ''
-aspect_ratio: '16:9'
-soft_limit_width: 1920
-soft_limit_height: 1000
-hard_limit_width: null
-hard_limit_height: null
+aspect_ratio: '1200:737'
+soft_limit_width: 1200
+soft_limit_height: 737
+hard_limit_width: 1200
+hard_limit_height: 737
