--- a/config/sync/core.entity_view_display.media.image.teaser.yml
+++ b/config/sync/core.entity_view_display.media.image.teaser.yml
@@ -5,7 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.media.teaser
     - field.field.media.image.field_media_image
-    - image.style.medium_carre
+    - field.field.media.image.field_tag_media
+    - image.style.liste_768x540_
     - media.type.image
   module:
     - image
@@ -19,7 +20,7 @@ content:
   field_media_image:
     label: visually_hidden
     settings:
-      image_style: medium_carre
+      image_style: liste_768x540_
       image_link: ''
     third_party_settings: {  }
     type: image
