Config export to manage crop export list.

--- a/config/sync/core.entity_form_display.media.image.default.yml
+++ b/config/sync/core.entity_form_display.media.image.default.yml
@@ -32,10 +32,11 @@ content:
       crop_list:
         - headband_thin
         - large_landsacape
+        - liste_768x540_
         - medium_carre
-        - portrait_large
         - slideshow
       progress_indicator: throbber
+      crop_types_required: {  }
       show_crop_area: false
     third_party_settings: {  }
     type: image_widget_crop
